// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`leave details page does not render LeaveDetails if absenceDetails not given 1`] = `null`;

exports[`leave details page does render page separated by keys if object of absenceDetails has more keys 1`] = `
Array [
  <div
    className="border-base-lighter margin-bottom-2"
    key="Child Bonding"
  >
    <Heading
      level="2"
    >
      Leave to bond with a child schedule
    </Heading>
    <div
      className="margin-top-2"
      key="PL-14432-0000002026"
    >
      <Heading
        className="margin-bottom-1"
        level="3"
      >
        Reduced leave
      </Heading>
      <p>
        From June 1, 2021 to June 8, 2021
      </p>
      <Tag
        label="Approved"
        paddingSm={true}
        state="success"
      />
      <Trans
        components={
          Object {
            "application-link": <a
              href="/applications/get-ready"
            />,
            "request-appeal-link": <a
              href="https://www.mass.gov/how-to/appealing-a-denied-paid-family-or-medical-leave-claim"
            />,
          }
        }
        i18nKey="pages.claimsStatus.leaveStatusMessage"
        tOptions={
          Object {
            "context": "Approved",
          }
        }
      />
    </div>
  </div>,
  <div
    className="border-base-lighter margin-bottom-2"
    key="Pregnancy/Maternity"
  >
    <Heading
      level="2"
    >
      Medical leave schedule
    </Heading>
    <div
      className="margin-top-2"
      key="PL-14434-0000002026"
    >
      <Heading
        className="margin-bottom-1"
        level="3"
      >
        Reduced leave
      </Heading>
      <p>
        From August 1, 2021 to August 8, 2021
      </p>
      <Tag
        label="Pending"
        paddingSm={true}
        state="pending"
      />
      <Trans
        components={
          Object {
            "application-link": <a
              href="/applications/get-ready"
            />,
            "request-appeal-link": <a
              href="https://www.mass.gov/how-to/appealing-a-denied-paid-family-or-medical-leave-claim"
            />,
          }
        }
        i18nKey="pages.claimsStatus.leaveStatusMessage"
        tOptions={
          Object {
            "context": "Pending",
          }
        }
      />
    </div>
  </div>,
  <div
    className="border-base-lighter margin-bottom-2"
    key="Serious Health Condition - Employee"
  >
    <Heading
      level="2"
    >
      Medical leave schedule
    </Heading>
    <div
      className="margin-top-2"
      key="PL-14434-0000002326"
    >
      <Heading
        className="margin-bottom-1"
        level="3"
      >
        Continuous leave
      </Heading>
      <p>
        From August 1, 2021 to August 8, 2021
      </p>
      <Tag
        label="Withdrawn"
        paddingSm={true}
        state="inactive"
      />
      <Trans
        components={
          Object {
            "application-link": <a
              href="/applications/get-ready"
            />,
            "request-appeal-link": <a
              href="https://www.mass.gov/how-to/appealing-a-denied-paid-family-or-medical-leave-claim"
            />,
          }
        }
        i18nKey="pages.claimsStatus.leaveStatusMessage"
        tOptions={
          Object {
            "context": "Withdrawn",
          }
        }
      />
    </div>
  </div>,
]
`;

exports[`leave details page does render page with one section if absenceDetails has only one key 1`] = `
<div
  className="border-base-lighter margin-bottom-2"
  key="Serious Health Condition - Employee"
>
  <Heading
    level="2"
  >
    Medical leave schedule
  </Heading>
  <div
    className="margin-top-2"
    key="PL-14434-0000002326"
  >
    <Heading
      className="margin-bottom-1"
      level="3"
    >
      Continuous leave
    </Heading>
    <p>
      From August 1, 2021 to August 8, 2021
    </p>
    <Tag
      label="Withdrawn"
      paddingSm={true}
      state="inactive"
    />
    <Trans
      components={
        Object {
          "application-link": <a
            href="/applications/get-ready"
          />,
          "request-appeal-link": <a
            href="https://www.mass.gov/how-to/appealing-a-denied-paid-family-or-medical-leave-claim"
          />,
        }
      }
      i18nKey="pages.claimsStatus.leaveStatusMessage"
      tOptions={
        Object {
          "context": "Withdrawn",
        }
      }
    />
  </div>
</div>
`;

exports[`status page ViewYourNotices displays only legal notices for the current application_id 1`] = `
<ViewYourNotices>
  <SectionWrapper>
    <div
      className="border-top border-base-lighter padding-y-2"
    >
      <Heading
        className="margin-bottom-1"
        level="2"
      >
        <h2
          className="margin-bottom-1 font-heading-md text-bold"
        >
          View your notices
        </h2>
      </Heading>
      <LegalNoticeList
        documents={
          Array [
            Document {
              "application_id": "application-id",
              "content_type": "image/png",
              "created_at": "2020-04-05",
              "description": null,
              "document_type": "Denial Notice",
              "fineos_document_id": "fineos-id-4",
              "name": "legal notice 1",
              "user_id": null,
            },
            Document {
              "application_id": "application-id",
              "content_type": "image/png",
              "created_at": "2020-04-05",
              "description": null,
              "document_type": "Request for more Information",
              "fineos_document_id": "fineos-id-7",
              "name": "legal notice 3",
              "user_id": null,
            },
          ]
        }
        onDownloadClick={[Function]}
      >
        <p
          className="padding-bottom-2 margin-top-05"
        >
          When you click the notice link, the file will download to your device.
        </p>
        <ul
          className="add-list-reset"
        >
          <li
            className="grid-row flex-row flex-justify-start flex-align-start margin-bottom-1 text-primary"
            key="fineos-id-4"
          >
            <Icon
              className="margin-right-1"
              fill="currentColor"
              name="file_present"
              size={3}
            >
              <svg
                aria-hidden="true"
                className="usa-icon--size-3 margin-right-1"
                fill="currentColor"
                focusable="false"
                role="img"
              >
                <use
                  xlinkHref="/img/sprite.svg#file_present"
                />
              </svg>
            </Icon>
            <div>
              <DownloadableDocument
                className="margin-left-2"
                document={
                  Document {
                    "application_id": "application-id",
                    "content_type": "image/png",
                    "created_at": "2020-04-05",
                    "description": null,
                    "document_type": "Denial Notice",
                    "fineos_document_id": "fineos-id-4",
                    "name": "legal notice 1",
                    "user_id": null,
                  }
                }
                onDownloadClick={[Function]}
                showCreatedAt={true}
              >
                <Button
                  className="text-bold"
                  onClick={[Function]}
                  type="button"
                  variation="unstyled"
                >
                  <button
                    className="usa-button position-relative text-bold usa-button--unstyled"
                    onClick={[Function]}
                    type="button"
                  >
                    Denial notice (PDF)
                  </button>
                </Button>
                <div
                  className="text-base-dark"
                >
                  Posted 4/5/2020
                </div>
              </DownloadableDocument>
            </div>
          </li>
          <li
            className="grid-row flex-row flex-justify-start flex-align-start margin-bottom-1 text-primary"
            key="fineos-id-7"
          >
            <Icon
              className="margin-right-1"
              fill="currentColor"
              name="file_present"
              size={3}
            >
              <svg
                aria-hidden="true"
                className="usa-icon--size-3 margin-right-1"
                fill="currentColor"
                focusable="false"
                role="img"
              >
                <use
                  xlinkHref="/img/sprite.svg#file_present"
                />
              </svg>
            </Icon>
            <div>
              <DownloadableDocument
                className="margin-left-2"
                document={
                  Document {
                    "application_id": "application-id",
                    "content_type": "image/png",
                    "created_at": "2020-04-05",
                    "description": null,
                    "document_type": "Request for more Information",
                    "fineos_document_id": "fineos-id-7",
                    "name": "legal notice 3",
                    "user_id": null,
                  }
                }
                onDownloadClick={[Function]}
                showCreatedAt={true}
              >
                <Button
                  className="text-bold"
                  onClick={[Function]}
                  type="button"
                  variation="unstyled"
                >
                  <button
                    className="usa-button position-relative text-bold usa-button--unstyled"
                    onClick={[Function]}
                    type="button"
                  >
                    Request for more information (PDF)
                  </button>
                </Button>
                <div
                  className="text-base-dark"
                >
                  Posted 4/5/2020
                </div>
              </DownloadableDocument>
            </div>
          </li>
        </ul>
      </LegalNoticeList>
    </div>
  </SectionWrapper>
</ViewYourNotices>
`;

exports[`status page includes a button to upload additional documents 1`] = `
<Fragment>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <div
    className="measure-6"
  >
    <Title
      small={true}
      weight="normal"
    >
      Application details
    </Title>
    <Heading
      level="2"
      size="1"
    >
      Medical leave
    </Heading>
    <div
      className="display-flex border-base-lighter margin-bottom-3 bg-base-lightest padding-2"
    >
      <div
        className="padding-right-10"
      >
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Application ID
        </Heading>
        <p
          className="text-bold"
        >
          absence-case-id
        </p>
      </div>
      <div>
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Employer Identification Number (EIN)
        </Heading>
        <p
          className="text-bold"
        >
          employer-fein
        </p>
      </div>
    </div>
    <Timeline
      absenceCaseId="fineos-abence-id"
      absenceDetails={
        Object {
          "Child Bonding": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002326",
              "period_type": "Continuous",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Withdrawn",
            },
          ],
          "Pregnancy/Maternity": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002026",
              "period_type": "Reduced",
              "reason": "Pregnancy/Maternity",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Denied",
            },
          ],
          "Serious Health Condition - Employee": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-06-08",
              "absence_period_start_date": "2021-06-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002026",
              "period_type": "Reduced",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Approved",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-07-08",
              "absence_period_start_date": "2021-07-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002326",
              "period_type": "Continuous",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Pending",
            },
          ],
        }
      }
      absencePeriods={
        Array [
          AbsencePeriod {
            "absence_period_end_date": "2021-06-08",
            "absence_period_start_date": "2021-06-01",
            "evidence_status": null,
            "fineos_leave_request_id": "PL-14432-0000002026",
            "period_type": "Reduced",
            "reason": "Serious Health Condition - Employee",
            "reason_qualifier_one": null,
            "reason_qualifier_two": null,
            "request_decision": "Approved",
          },
          AbsencePeriod {
            "absence_period_end_date": "2021-07-08",
            "absence_period_start_date": "2021-07-01",
            "evidence_status": null,
            "fineos_leave_request_id": "PL-14432-0000002326",
            "period_type": "Continuous",
            "reason": "Serious Health Condition - Employee",
            "reason_qualifier_one": null,
            "reason_qualifier_two": null,
            "request_decision": "Pending",
          },
          AbsencePeriod {
            "absence_period_end_date": "2021-08-08",
            "absence_period_start_date": "2021-08-01",
            "evidence_status": null,
            "fineos_leave_request_id": "PL-14434-0000002026",
            "period_type": "Reduced",
            "reason": "Pregnancy/Maternity",
            "reason_qualifier_one": null,
            "reason_qualifier_two": null,
            "request_decision": "Denied",
          },
          AbsencePeriod {
            "absence_period_end_date": "2021-08-08",
            "absence_period_start_date": "2021-08-01",
            "evidence_status": null,
            "fineos_leave_request_id": "PL-14434-0000002326",
            "period_type": "Continuous",
            "reason": "Child Bonding",
            "reason_qualifier_one": null,
            "reason_qualifier_two": null,
            "request_decision": "Withdrawn",
          },
        ]
      }
      appLogic={
        Object {
          "_appErrorsLogic": Object {
            "catchError": [Function],
            "clearErrors": [Function],
            "clearRequiredFieldErrors": [Function],
            "setAppErrors": [Function],
          },
          "appErrors": AppErrorInfoCollection {
            "items": Array [],
            "itemsById": Object {},
          },
          "auth": Object {
            "authData": Object {},
            "createAccount": [Function],
            "createEmployerAccount": [Function],
            "forgotPassword": [Function],
            "isLoggedIn": true,
            "login": [Function],
            "logout": [Function],
            "requireLogin": [Function],
            "resendForgotPasswordCode": [Function],
            "resendVerifyAccountCode": [Function],
            "resetPassword": [Function],
            "verifyAccount": [Function],
          },
          "benefitsApplications": Object {
            "benefitsApplications": BenefitsApplicationCollection {
              "items": Array [
                BenefitsApplication {
                  "application_id": "mock_application_id",
                  "concurrent_leave": null,
                  "created_at": null,
                  "date_of_birth": null,
                  "employer_benefits": Array [],
                  "employer_fein": null,
                  "employment_status": null,
                  "fineos_absence_id": null,
                  "first_name": null,
                  "gender": null,
                  "has_concurrent_leave": null,
                  "has_continuous_leave_periods": null,
                  "has_employer_benefits": null,
                  "has_intermittent_leave_periods": null,
                  "has_mailing_address": null,
                  "has_other_incomes": null,
                  "has_previous_leaves_other_reason": null,
                  "has_previous_leaves_same_reason": null,
                  "has_reduced_schedule_leave_periods": null,
                  "has_state_id": null,
                  "has_submitted_payment_preference": null,
                  "hours_worked_per_week": null,
                  "last_name": null,
                  "leave_details": Object {
                    "caring_leave_metadata": null,
                    "child_birth_date": null,
                    "child_placement_date": null,
                    "employer_notified": null,
                    "has_future_child_date": null,
                    "pregnant_or_recent_birth": null,
                    "reason_qualifier": null,
                  },
                  "mailing_address": null,
                  "mass_id": null,
                  "middle_name": null,
                  "other_incomes": Array [],
                  "payment_preference": null,
                  "phone": Object {
                    "int_code": null,
                    "phone_number": null,
                    "phone_type": null,
                  },
                  "previous_leaves_other_reason": Array [],
                  "previous_leaves_same_reason": Array [],
                  "residential_address": Address {
                    "city": null,
                    "line_1": null,
                    "line_2": null,
                    "state": null,
                    "zip": null,
                  },
                  "status": null,
                  "tax_identifier": null,
                  "work_pattern": null,
                },
              ],
              "itemsById": Object {
                "mock_application_id": BenefitsApplication {
                  "application_id": "mock_application_id",
                  "concurrent_leave": null,
                  "created_at": null,
                  "date_of_birth": null,
                  "employer_benefits": Array [],
                  "employer_fein": null,
                  "employment_status": null,
                  "fineos_absence_id": null,
                  "first_name": null,
                  "gender": null,
                  "has_concurrent_leave": null,
                  "has_continuous_leave_periods": null,
                  "has_employer_benefits": null,
                  "has_intermittent_leave_periods": null,
                  "has_mailing_address": null,
                  "has_other_incomes": null,
                  "has_previous_leaves_other_reason": null,
                  "has_previous_leaves_same_reason": null,
                  "has_reduced_schedule_leave_periods": null,
                  "has_state_id": null,
                  "has_submitted_payment_preference": null,
                  "hours_worked_per_week": null,
                  "last_name": null,
                  "leave_details": Object {
                    "caring_leave_metadata": null,
                    "child_birth_date": null,
                    "child_placement_date": null,
                    "employer_notified": null,
                    "has_future_child_date": null,
                    "pregnant_or_recent_birth": null,
                    "reason_qualifier": null,
                  },
                  "mailing_address": null,
                  "mass_id": null,
                  "middle_name": null,
                  "other_incomes": Array [],
                  "payment_preference": null,
                  "phone": Object {
                    "int_code": null,
                    "phone_number": null,
                    "phone_type": null,
                  },
                  "previous_leaves_other_reason": Array [],
                  "previous_leaves_same_reason": Array [],
                  "residential_address": Address {
                    "city": null,
                    "line_1": null,
                    "line_2": null,
                    "state": null,
                    "zip": null,
                  },
                  "status": null,
                  "tax_identifier": null,
                  "work_pattern": null,
                },
              },
            },
            "complete": [Function],
            "create": [Function],
            "hasLoadedAll": false,
            "hasLoadedBenefitsApplicationAndWarnings": [MockFunction],
            "load": [Function],
            "loadAll": [Function],
            "submit": [Function],
            "submitPaymentPreference": [Function],
            "update": [MockFunction],
            "warningsLists": Object {},
          },
          "catchError": [Function],
          "claims": Object {
            "activeFilters": Object {},
            "claimDetail": ClaimDetail {
              "absence_periods": Array [
                AbsencePeriod {
                  "absence_period_end_date": "2021-06-08",
                  "absence_period_start_date": "2021-06-01",
                  "evidence_status": null,
                  "fineos_leave_request_id": "PL-14432-0000002026",
                  "period_type": "Reduced",
                  "reason": "Serious Health Condition - Employee",
                  "reason_qualifier_one": null,
                  "reason_qualifier_two": null,
                  "request_decision": "Approved",
                },
                AbsencePeriod {
                  "absence_period_end_date": "2021-07-08",
                  "absence_period_start_date": "2021-07-01",
                  "evidence_status": null,
                  "fineos_leave_request_id": "PL-14432-0000002326",
                  "period_type": "Continuous",
                  "reason": "Serious Health Condition - Employee",
                  "reason_qualifier_one": null,
                  "reason_qualifier_two": null,
                  "request_decision": "Pending",
                },
                AbsencePeriod {
                  "absence_period_end_date": "2021-08-08",
                  "absence_period_start_date": "2021-08-01",
                  "evidence_status": null,
                  "fineos_leave_request_id": "PL-14434-0000002026",
                  "period_type": "Reduced",
                  "reason": "Pregnancy/Maternity",
                  "reason_qualifier_one": null,
                  "reason_qualifier_two": null,
                  "request_decision": "Denied",
                },
                AbsencePeriod {
                  "absence_period_end_date": "2021-08-08",
                  "absence_period_start_date": "2021-08-01",
                  "evidence_status": null,
                  "fineos_leave_request_id": "PL-14434-0000002326",
                  "period_type": "Continuous",
                  "reason": "Child Bonding",
                  "reason_qualifier_one": null,
                  "reason_qualifier_two": null,
                  "request_decision": "Withdrawn",
                },
              ],
              "application_id": "application-id",
              "employee": null,
              "employer": ClaimEmployer {
                "employer_dba": null,
                "employer_fein": "employer-fein",
                "employer_id": null,
              },
              "fineos_absence_id": "fineos-abence-id",
              "fineos_notification_id": null,
              "managed_requirements": Array [],
              "outstanding_evidence": Object {
                "employee_evidence": Array [],
                "employer_evidence": Array [],
              },
            },
            "claims": ClaimCollection {
              "items": Array [],
              "itemsById": Object {},
            },
            "clearClaims": [Function],
            "isLoadingClaimDetail": false,
            "isLoadingClaims": undefined,
            "loadClaimDetail": [MockFunction],
            "loadPage": [Function],
            "paginationMeta": PaginationMeta {
              "order_by": undefined,
              "order_direction": undefined,
              "page_offset": undefined,
              "page_size": undefined,
              "total_pages": undefined,
              "total_records": undefined,
            },
          },
          "clearErrors": [Function],
          "clearRequiredFieldErrors": [Function],
          "documents": Object {
            "attach": [Function],
            "documents": DocumentCollection {
              "items": Array [
                Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Denial Notice",
                  "fineos_document_id": "fineos-id-4",
                  "name": "legal notice 1",
                  "user_id": null,
                },
                Document {
                  "application_id": "not-my-application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Request for more Information",
                  "fineos_document_id": "fineos-id-5",
                  "name": "legal notice 2",
                  "user_id": null,
                },
                Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Identification Proof",
                  "fineos_document_id": "fineos-id-6",
                  "name": "non-legal notice 1",
                  "user_id": null,
                },
                Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Request for more Information",
                  "fineos_document_id": "fineos-id-7",
                  "name": "legal notice 3",
                  "user_id": null,
                },
              ],
              "itemsById": Object {
                "fineos-id-4": Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Denial Notice",
                  "fineos_document_id": "fineos-id-4",
                  "name": "legal notice 1",
                  "user_id": null,
                },
                "fineos-id-5": Document {
                  "application_id": "not-my-application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Request for more Information",
                  "fineos_document_id": "fineos-id-5",
                  "name": "legal notice 2",
                  "user_id": null,
                },
                "fineos-id-6": Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Identification Proof",
                  "fineos_document_id": "fineos-id-6",
                  "name": "non-legal notice 1",
                  "user_id": null,
                },
                "fineos-id-7": Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Request for more Information",
                  "fineos_document_id": "fineos-id-7",
                  "name": "legal notice 3",
                  "user_id": null,
                },
              },
            },
            "download": [Function],
            "hasLoadedClaimDocuments": [Function],
            "loadAll": [MockFunction],
          },
          "employers": Object {
            "addEmployer": [Function],
            "claim": EmployerClaim {
              "application_id": null,
              "concurrent_leave": null,
              "created_at": null,
              "date_of_birth": null,
              "employer_benefits": Array [],
              "employer_dba": null,
              "employer_fein": null,
              "employer_id": null,
              "fineos_absence_id": null,
              "first_name": null,
              "follow_up_date": null,
              "gender": null,
              "hours_worked_per_week": null,
              "is_reviewable": null,
              "last_name": null,
              "leave_details": Object {
                "continuous_leave_periods": null,
                "employer_notification_date": null,
                "intermittent_leave_periods": null,
                "reason": null,
                "reduced_schedule_leave_periods": null,
              },
              "middle_name": null,
              "previous_leaves": Array [],
              "residential_address": Address {
                "city": null,
                "line_1": null,
                "line_2": null,
                "state": null,
                "zip": null,
              },
              "status": null,
              "tax_identifier": null,
              "uses_second_eform_version": null,
            },
            "documents": null,
            "downloadDocument": [Function],
            "loadClaim": [Function],
            "loadDocuments": [Function],
            "loadWithholding": [Function],
            "submitClaimReview": [Function],
            "submitWithholding": [Function],
          },
          "featureFlags": Object {
            "flags": Array [],
            "getFlag": [Function],
            "loadFlags": [Function],
          },
          "otherLeaves": Object {
            "removeEmployerBenefit": [Function],
            "removeOtherIncome": [Function],
            "removePreviousLeave": [Function],
          },
          "portalFlow": Object {
            "getNextPageRoute": [Function],
            "goTo": [MockFunction],
            "goToNextPage": [Function],
            "goToPageFor": [Function],
            "page": Object {
              "on": Object {
                "UPLOAD_DOC_OPTIONS": "/applications/upload",
                "UPLOAD_PROOF_OF_BIRTH": "/applications/upload/proof-of-birth",
                "UPLOAD_PROOF_OF_PLACEMENT": "/applications/upload/proof-of-placement",
              },
            },
            "pageRoute": "/applications/status",
            "pathWithParams": "/applications/status",
            "pathname": "",
            "updateQuery": [Function],
          },
          "setAppErrors": [Function],
          "users": Object {
            "convertUser": [Function],
            "loadUser": [Function],
            "requireUserConsentToDataAgreement": [MockFunction],
            "requireUserRole": [Function],
            "setUser": [Function],
            "updateUser": [Function],
            "user": User {
              "auth_id": null,
              "consented_to_data_sharing": true,
              "email_address": null,
              "roles": Array [],
              "status": null,
              "user_id": "mock_user_id",
              "user_leave_administrators": Array [],
            },
          },
        }
      }
      applicationId="application-id"
      docList={
        Array [
          Document {
            "application_id": "application-id",
            "content_type": "image/png",
            "created_at": "2020-04-05",
            "description": null,
            "document_type": "Denial Notice",
            "fineos_document_id": "fineos-id-4",
            "name": "legal notice 1",
            "user_id": null,
          },
          Document {
            "application_id": "application-id",
            "content_type": "image/png",
            "created_at": "2020-04-05",
            "description": null,
            "document_type": "Identification Proof",
            "fineos_document_id": "fineos-id-6",
            "name": "non-legal notice 1",
            "user_id": null,
          },
          Document {
            "application_id": "application-id",
            "content_type": "image/png",
            "created_at": "2020-04-05",
            "description": null,
            "document_type": "Request for more Information",
            "fineos_document_id": "fineos-id-7",
            "name": "legal notice 3",
            "user_id": null,
          },
        ]
      }
    />
    <LeaveDetails
      absenceDetails={
        Object {
          "Child Bonding": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002326",
              "period_type": "Continuous",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Withdrawn",
            },
          ],
          "Pregnancy/Maternity": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002026",
              "period_type": "Reduced",
              "reason": "Pregnancy/Maternity",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Denied",
            },
          ],
          "Serious Health Condition - Employee": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-06-08",
              "absence_period_start_date": "2021-06-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002026",
              "period_type": "Reduced",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Approved",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-07-08",
              "absence_period_start_date": "2021-07-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002326",
              "period_type": "Continuous",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Pending",
            },
          ],
        }
      }
    />
    <ViewYourNotices />
    <div
      className="border-top border-base-lighter padding-top-2"
      id="upload_documents"
    >
      <Heading
        level="2"
      >
        Upload Documents
      </Heading>
      <Heading
        level="3"
      >
        Respond to requests for information
      </Heading>
      <p>
        If you have a request for more information, use this button to upload the requested documentation.
      </p>
      <ButtonLink
        className="measure-6 margin-bottom-3"
        href="/applications/upload?absence_case_id=fineos-abence-id"
      >
        Upload additional documents
      </ButtonLink>
    </div>
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Manage your application
      </Heading>
      <Heading
        level="3"
      >
        Make changes
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
          }
        }
        i18nKey="pages.claimsStatus.makeChangesBody"
      />
      <Heading
        level="3"
      >
        Report other benefits or income
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsStatus.reportOtherBenefitsBody"
      />
    </div>
  </div>
</Fragment>
`;

exports[`status page info alert displays if claimant has bonding but not pregnancy claims 1`] = `
<div
  className="usa-alert usa-alert--info usa-alert--no-icon margin-bottom-3"
  tabIndex="-1"
>
  <div
    className="usa-alert__body"
    role="region"
  >
    <Heading
      className="usa-alert__heading"
      level="2"
      size="4"
    >
      If you gave birth, you may be eligible for paid medical leave
    </Heading>
    <div
      className="usa-alert__text"
    >
      <Trans
        components={
          Object {
            "about-bonding-leave-link": <a
              href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
              rel="noreferrer noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="pages.claimsStatus.infoAlertBody"
        tOptions={
          Object {
            "context": "bonding",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`status page info alert displays if claimant has bonding but not pregnancy claims 2`] = `
Array [
  "You can take up to 20 weeks of paid medical leave if you’re unable to work during your pregnancy and to recover from childbirth. Your health care provider determines how much medical leave you will need. Call the Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " if you need ",
  <a
    href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
    key="3"
    rel="noreferrer noopener"
    target="_blank"
  >
    medical leave after giving birth.
  </a>,
]
`;

exports[`status page info alert displays if claimant has pregnancy but not bonding claims 1`] = `
<div
  className="usa-alert usa-alert--info usa-alert--no-icon margin-bottom-3"
  tabIndex="-1"
>
  <div
    className="usa-alert__body"
    role="region"
  >
    <Heading
      className="usa-alert__heading"
      level="2"
      size="4"
    >
      You may also be eligible for paid family leave
    </Heading>
    <div
      className="usa-alert__text"
    >
      <Trans
        components={
          Object {
            "about-bonding-leave-link": <a
              href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
              rel="noreferrer noopener"
              target="_blank"
            />,
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="pages.claimsStatus.infoAlertBody"
        tOptions={
          Object {
            "context": "pregnancy",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`status page info alert displays if claimant has pregnancy but not bonding claims 2`] = `
Array [
  "You can take up to 12 weeks of paid family leave to bond with your child after your medical leave ends. ",
  <a
    href="https://www.mass.gov/info-details/paid-family-and-medical-leave-pfml-benefits-guide#about-family-leave-to-bond-with-a-child-"
    key="1"
    rel="noreferrer noopener"
    target="_blank"
  >
    Family leave to bond with your child
  </a>,
  " can be easily added to your claim by calling our Contact Center at ",
  <a
    href="tel:(833) 344-7365"
    key="3"
  >
    (833) 344‑7365
  </a>,
  ".",
]
`;

exports[`status page renders the page 1`] = `
<Fragment>
  <BackButton
    href="/applications"
    label="Back to your applications"
  />
  <div
    className="measure-6"
  >
    <Title
      small={true}
      weight="normal"
    >
      Application details
    </Title>
    <Heading
      level="2"
      size="1"
    >
      Medical leave
    </Heading>
    <div
      className="display-flex border-base-lighter margin-bottom-3 bg-base-lightest padding-2"
    >
      <div
        className="padding-right-10"
      >
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Application ID
        </Heading>
        <p
          className="text-bold"
        >
          absence-case-id
        </p>
      </div>
      <div>
        <Heading
          level="2"
          size="4"
          weight="normal"
        >
          Employer Identification Number (EIN)
        </Heading>
        <p
          className="text-bold"
        >
          employer-fein
        </p>
      </div>
    </div>
    <Timeline
      absenceCaseId="fineos-abence-id"
      absenceDetails={
        Object {
          "Child Bonding": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002326",
              "period_type": "Continuous",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Withdrawn",
            },
          ],
          "Pregnancy/Maternity": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002026",
              "period_type": "Reduced",
              "reason": "Pregnancy/Maternity",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Denied",
            },
          ],
          "Serious Health Condition - Employee": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-06-08",
              "absence_period_start_date": "2021-06-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002026",
              "period_type": "Reduced",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Approved",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-07-08",
              "absence_period_start_date": "2021-07-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002326",
              "period_type": "Continuous",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Pending",
            },
          ],
        }
      }
      absencePeriods={
        Array [
          AbsencePeriod {
            "absence_period_end_date": "2021-06-08",
            "absence_period_start_date": "2021-06-01",
            "evidence_status": null,
            "fineos_leave_request_id": "PL-14432-0000002026",
            "period_type": "Reduced",
            "reason": "Serious Health Condition - Employee",
            "reason_qualifier_one": null,
            "reason_qualifier_two": null,
            "request_decision": "Approved",
          },
          AbsencePeriod {
            "absence_period_end_date": "2021-07-08",
            "absence_period_start_date": "2021-07-01",
            "evidence_status": null,
            "fineos_leave_request_id": "PL-14432-0000002326",
            "period_type": "Continuous",
            "reason": "Serious Health Condition - Employee",
            "reason_qualifier_one": null,
            "reason_qualifier_two": null,
            "request_decision": "Pending",
          },
          AbsencePeriod {
            "absence_period_end_date": "2021-08-08",
            "absence_period_start_date": "2021-08-01",
            "evidence_status": null,
            "fineos_leave_request_id": "PL-14434-0000002026",
            "period_type": "Reduced",
            "reason": "Pregnancy/Maternity",
            "reason_qualifier_one": null,
            "reason_qualifier_two": null,
            "request_decision": "Denied",
          },
          AbsencePeriod {
            "absence_period_end_date": "2021-08-08",
            "absence_period_start_date": "2021-08-01",
            "evidence_status": null,
            "fineos_leave_request_id": "PL-14434-0000002326",
            "period_type": "Continuous",
            "reason": "Child Bonding",
            "reason_qualifier_one": null,
            "reason_qualifier_two": null,
            "request_decision": "Withdrawn",
          },
        ]
      }
      appLogic={
        Object {
          "_appErrorsLogic": Object {
            "catchError": [Function],
            "clearErrors": [Function],
            "clearRequiredFieldErrors": [Function],
            "setAppErrors": [Function],
          },
          "appErrors": AppErrorInfoCollection {
            "items": Array [],
            "itemsById": Object {},
          },
          "auth": Object {
            "authData": Object {},
            "createAccount": [Function],
            "createEmployerAccount": [Function],
            "forgotPassword": [Function],
            "isLoggedIn": true,
            "login": [Function],
            "logout": [Function],
            "requireLogin": [Function],
            "resendForgotPasswordCode": [Function],
            "resendVerifyAccountCode": [Function],
            "resetPassword": [Function],
            "verifyAccount": [Function],
          },
          "benefitsApplications": Object {
            "benefitsApplications": BenefitsApplicationCollection {
              "items": Array [
                BenefitsApplication {
                  "application_id": "mock_application_id",
                  "concurrent_leave": null,
                  "created_at": null,
                  "date_of_birth": null,
                  "employer_benefits": Array [],
                  "employer_fein": null,
                  "employment_status": null,
                  "fineos_absence_id": null,
                  "first_name": null,
                  "gender": null,
                  "has_concurrent_leave": null,
                  "has_continuous_leave_periods": null,
                  "has_employer_benefits": null,
                  "has_intermittent_leave_periods": null,
                  "has_mailing_address": null,
                  "has_other_incomes": null,
                  "has_previous_leaves_other_reason": null,
                  "has_previous_leaves_same_reason": null,
                  "has_reduced_schedule_leave_periods": null,
                  "has_state_id": null,
                  "has_submitted_payment_preference": null,
                  "hours_worked_per_week": null,
                  "last_name": null,
                  "leave_details": Object {
                    "caring_leave_metadata": null,
                    "child_birth_date": null,
                    "child_placement_date": null,
                    "employer_notified": null,
                    "has_future_child_date": null,
                    "pregnant_or_recent_birth": null,
                    "reason_qualifier": null,
                  },
                  "mailing_address": null,
                  "mass_id": null,
                  "middle_name": null,
                  "other_incomes": Array [],
                  "payment_preference": null,
                  "phone": Object {
                    "int_code": null,
                    "phone_number": null,
                    "phone_type": null,
                  },
                  "previous_leaves_other_reason": Array [],
                  "previous_leaves_same_reason": Array [],
                  "residential_address": Address {
                    "city": null,
                    "line_1": null,
                    "line_2": null,
                    "state": null,
                    "zip": null,
                  },
                  "status": null,
                  "tax_identifier": null,
                  "work_pattern": null,
                },
              ],
              "itemsById": Object {
                "mock_application_id": BenefitsApplication {
                  "application_id": "mock_application_id",
                  "concurrent_leave": null,
                  "created_at": null,
                  "date_of_birth": null,
                  "employer_benefits": Array [],
                  "employer_fein": null,
                  "employment_status": null,
                  "fineos_absence_id": null,
                  "first_name": null,
                  "gender": null,
                  "has_concurrent_leave": null,
                  "has_continuous_leave_periods": null,
                  "has_employer_benefits": null,
                  "has_intermittent_leave_periods": null,
                  "has_mailing_address": null,
                  "has_other_incomes": null,
                  "has_previous_leaves_other_reason": null,
                  "has_previous_leaves_same_reason": null,
                  "has_reduced_schedule_leave_periods": null,
                  "has_state_id": null,
                  "has_submitted_payment_preference": null,
                  "hours_worked_per_week": null,
                  "last_name": null,
                  "leave_details": Object {
                    "caring_leave_metadata": null,
                    "child_birth_date": null,
                    "child_placement_date": null,
                    "employer_notified": null,
                    "has_future_child_date": null,
                    "pregnant_or_recent_birth": null,
                    "reason_qualifier": null,
                  },
                  "mailing_address": null,
                  "mass_id": null,
                  "middle_name": null,
                  "other_incomes": Array [],
                  "payment_preference": null,
                  "phone": Object {
                    "int_code": null,
                    "phone_number": null,
                    "phone_type": null,
                  },
                  "previous_leaves_other_reason": Array [],
                  "previous_leaves_same_reason": Array [],
                  "residential_address": Address {
                    "city": null,
                    "line_1": null,
                    "line_2": null,
                    "state": null,
                    "zip": null,
                  },
                  "status": null,
                  "tax_identifier": null,
                  "work_pattern": null,
                },
              },
            },
            "complete": [Function],
            "create": [Function],
            "hasLoadedAll": false,
            "hasLoadedBenefitsApplicationAndWarnings": [MockFunction],
            "load": [Function],
            "loadAll": [Function],
            "submit": [Function],
            "submitPaymentPreference": [Function],
            "update": [MockFunction],
            "warningsLists": Object {},
          },
          "catchError": [Function],
          "claims": Object {
            "activeFilters": Object {},
            "claimDetail": ClaimDetail {
              "absence_periods": Array [
                AbsencePeriod {
                  "absence_period_end_date": "2021-06-08",
                  "absence_period_start_date": "2021-06-01",
                  "evidence_status": null,
                  "fineos_leave_request_id": "PL-14432-0000002026",
                  "period_type": "Reduced",
                  "reason": "Serious Health Condition - Employee",
                  "reason_qualifier_one": null,
                  "reason_qualifier_two": null,
                  "request_decision": "Approved",
                },
                AbsencePeriod {
                  "absence_period_end_date": "2021-07-08",
                  "absence_period_start_date": "2021-07-01",
                  "evidence_status": null,
                  "fineos_leave_request_id": "PL-14432-0000002326",
                  "period_type": "Continuous",
                  "reason": "Serious Health Condition - Employee",
                  "reason_qualifier_one": null,
                  "reason_qualifier_two": null,
                  "request_decision": "Pending",
                },
                AbsencePeriod {
                  "absence_period_end_date": "2021-08-08",
                  "absence_period_start_date": "2021-08-01",
                  "evidence_status": null,
                  "fineos_leave_request_id": "PL-14434-0000002026",
                  "period_type": "Reduced",
                  "reason": "Pregnancy/Maternity",
                  "reason_qualifier_one": null,
                  "reason_qualifier_two": null,
                  "request_decision": "Denied",
                },
                AbsencePeriod {
                  "absence_period_end_date": "2021-08-08",
                  "absence_period_start_date": "2021-08-01",
                  "evidence_status": null,
                  "fineos_leave_request_id": "PL-14434-0000002326",
                  "period_type": "Continuous",
                  "reason": "Child Bonding",
                  "reason_qualifier_one": null,
                  "reason_qualifier_two": null,
                  "request_decision": "Withdrawn",
                },
              ],
              "application_id": "application-id",
              "employee": null,
              "employer": ClaimEmployer {
                "employer_dba": null,
                "employer_fein": "employer-fein",
                "employer_id": null,
              },
              "fineos_absence_id": "fineos-abence-id",
              "fineos_notification_id": null,
              "managed_requirements": Array [],
              "outstanding_evidence": Object {
                "employee_evidence": Array [],
                "employer_evidence": Array [],
              },
            },
            "claims": ClaimCollection {
              "items": Array [],
              "itemsById": Object {},
            },
            "clearClaims": [Function],
            "isLoadingClaimDetail": false,
            "isLoadingClaims": undefined,
            "loadClaimDetail": [MockFunction],
            "loadPage": [Function],
            "paginationMeta": PaginationMeta {
              "order_by": undefined,
              "order_direction": undefined,
              "page_offset": undefined,
              "page_size": undefined,
              "total_pages": undefined,
              "total_records": undefined,
            },
          },
          "clearErrors": [Function],
          "clearRequiredFieldErrors": [Function],
          "documents": Object {
            "attach": [Function],
            "documents": DocumentCollection {
              "items": Array [
                Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Denial Notice",
                  "fineos_document_id": "fineos-id-4",
                  "name": "legal notice 1",
                  "user_id": null,
                },
                Document {
                  "application_id": "not-my-application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Request for more Information",
                  "fineos_document_id": "fineos-id-5",
                  "name": "legal notice 2",
                  "user_id": null,
                },
                Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Identification Proof",
                  "fineos_document_id": "fineos-id-6",
                  "name": "non-legal notice 1",
                  "user_id": null,
                },
                Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Request for more Information",
                  "fineos_document_id": "fineos-id-7",
                  "name": "legal notice 3",
                  "user_id": null,
                },
              ],
              "itemsById": Object {
                "fineos-id-4": Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Denial Notice",
                  "fineos_document_id": "fineos-id-4",
                  "name": "legal notice 1",
                  "user_id": null,
                },
                "fineos-id-5": Document {
                  "application_id": "not-my-application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Request for more Information",
                  "fineos_document_id": "fineos-id-5",
                  "name": "legal notice 2",
                  "user_id": null,
                },
                "fineos-id-6": Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Identification Proof",
                  "fineos_document_id": "fineos-id-6",
                  "name": "non-legal notice 1",
                  "user_id": null,
                },
                "fineos-id-7": Document {
                  "application_id": "application-id",
                  "content_type": "image/png",
                  "created_at": "2020-04-05",
                  "description": null,
                  "document_type": "Request for more Information",
                  "fineos_document_id": "fineos-id-7",
                  "name": "legal notice 3",
                  "user_id": null,
                },
              },
            },
            "download": [Function],
            "hasLoadedClaimDocuments": [Function],
            "loadAll": [MockFunction],
          },
          "employers": Object {
            "addEmployer": [Function],
            "claim": EmployerClaim {
              "application_id": null,
              "concurrent_leave": null,
              "created_at": null,
              "date_of_birth": null,
              "employer_benefits": Array [],
              "employer_dba": null,
              "employer_fein": null,
              "employer_id": null,
              "fineos_absence_id": null,
              "first_name": null,
              "follow_up_date": null,
              "gender": null,
              "hours_worked_per_week": null,
              "is_reviewable": null,
              "last_name": null,
              "leave_details": Object {
                "continuous_leave_periods": null,
                "employer_notification_date": null,
                "intermittent_leave_periods": null,
                "reason": null,
                "reduced_schedule_leave_periods": null,
              },
              "middle_name": null,
              "previous_leaves": Array [],
              "residential_address": Address {
                "city": null,
                "line_1": null,
                "line_2": null,
                "state": null,
                "zip": null,
              },
              "status": null,
              "tax_identifier": null,
              "uses_second_eform_version": null,
            },
            "documents": null,
            "downloadDocument": [Function],
            "loadClaim": [Function],
            "loadDocuments": [Function],
            "loadWithholding": [Function],
            "submitClaimReview": [Function],
            "submitWithholding": [Function],
          },
          "featureFlags": Object {
            "flags": Array [],
            "getFlag": [Function],
            "loadFlags": [Function],
          },
          "otherLeaves": Object {
            "removeEmployerBenefit": [Function],
            "removeOtherIncome": [Function],
            "removePreviousLeave": [Function],
          },
          "portalFlow": Object {
            "getNextPageRoute": [Function],
            "goTo": [MockFunction],
            "goToNextPage": [Function],
            "goToPageFor": [Function],
            "page": Object {
              "on": Object {
                "UPLOAD_DOC_OPTIONS": "/applications/upload",
                "UPLOAD_PROOF_OF_BIRTH": "/applications/upload/proof-of-birth",
                "UPLOAD_PROOF_OF_PLACEMENT": "/applications/upload/proof-of-placement",
              },
            },
            "pageRoute": "/applications/status",
            "pathWithParams": "/applications/status",
            "pathname": "",
            "updateQuery": [Function],
          },
          "setAppErrors": [Function],
          "users": Object {
            "convertUser": [Function],
            "loadUser": [Function],
            "requireUserConsentToDataAgreement": [MockFunction],
            "requireUserRole": [Function],
            "setUser": [Function],
            "updateUser": [Function],
            "user": User {
              "auth_id": null,
              "consented_to_data_sharing": true,
              "email_address": null,
              "roles": Array [],
              "status": null,
              "user_id": "mock_user_id",
              "user_leave_administrators": Array [],
            },
          },
        }
      }
      applicationId="application-id"
      docList={
        Array [
          Document {
            "application_id": "application-id",
            "content_type": "image/png",
            "created_at": "2020-04-05",
            "description": null,
            "document_type": "Denial Notice",
            "fineos_document_id": "fineos-id-4",
            "name": "legal notice 1",
            "user_id": null,
          },
          Document {
            "application_id": "application-id",
            "content_type": "image/png",
            "created_at": "2020-04-05",
            "description": null,
            "document_type": "Identification Proof",
            "fineos_document_id": "fineos-id-6",
            "name": "non-legal notice 1",
            "user_id": null,
          },
          Document {
            "application_id": "application-id",
            "content_type": "image/png",
            "created_at": "2020-04-05",
            "description": null,
            "document_type": "Request for more Information",
            "fineos_document_id": "fineos-id-7",
            "name": "legal notice 3",
            "user_id": null,
          },
        ]
      }
    />
    <LeaveDetails
      absenceDetails={
        Object {
          "Child Bonding": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002326",
              "period_type": "Continuous",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Withdrawn",
            },
          ],
          "Pregnancy/Maternity": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002026",
              "period_type": "Reduced",
              "reason": "Pregnancy/Maternity",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Denied",
            },
          ],
          "Serious Health Condition - Employee": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-06-08",
              "absence_period_start_date": "2021-06-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002026",
              "period_type": "Reduced",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Approved",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-07-08",
              "absence_period_start_date": "2021-07-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002326",
              "period_type": "Continuous",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Pending",
            },
          ],
        }
      }
    />
    <ViewYourNotices />
    <div
      className="border-top border-base-lighter padding-top-2"
      id="upload_documents"
    >
      <Heading
        level="2"
      >
        Upload Documents
      </Heading>
      <Heading
        level="3"
      >
        Respond to requests for information
      </Heading>
      <p>
        If you have a request for more information, use this button to upload the requested documentation.
      </p>
      <ButtonLink
        className="measure-6 margin-bottom-3"
        href="/applications/upload?absence_case_id=fineos-abence-id"
      >
        Upload additional documents
      </ButtonLink>
    </div>
    <div
      className="border-top border-base-lighter padding-top-2"
    >
      <Heading
        level="2"
      >
        Manage your application
      </Heading>
      <Heading
        level="3"
      >
        Make changes
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
          }
        }
        i18nKey="pages.claimsStatus.makeChangesBody"
      />
      <Heading
        level="3"
      >
        Report other benefits or income
      </Heading>
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344‑7365"
            />,
            "li": <li />,
            "ul": <ul
              className="usa-list"
            />,
          }
        }
        i18nKey="pages.claimsStatus.reportOtherBenefitsBody"
      />
    </div>
  </div>
</Fragment>
`;

exports[`status page shows a spinner if there is no claim detail 1`] = `
<Status
  appLogic={
    Object {
      "_appErrorsLogic": Object {
        "catchError": [Function],
        "clearErrors": [Function],
        "clearRequiredFieldErrors": [Function],
        "setAppErrors": [Function],
      },
      "appErrors": AppErrorInfoCollection {
        "items": Array [],
        "itemsById": Object {},
      },
      "auth": Object {
        "authData": Object {},
        "createAccount": [Function],
        "createEmployerAccount": [Function],
        "forgotPassword": [Function],
        "isLoggedIn": true,
        "login": [Function],
        "logout": [Function],
        "requireLogin": [Function],
        "resendForgotPasswordCode": [Function],
        "resendVerifyAccountCode": [Function],
        "resetPassword": [Function],
        "verifyAccount": [Function],
      },
      "benefitsApplications": Object {
        "benefitsApplications": BenefitsApplicationCollection {
          "items": Array [
            BenefitsApplication {
              "application_id": "mock_application_id",
              "concurrent_leave": null,
              "created_at": null,
              "date_of_birth": null,
              "employer_benefits": Array [],
              "employer_fein": null,
              "employment_status": null,
              "fineos_absence_id": null,
              "first_name": null,
              "gender": null,
              "has_concurrent_leave": null,
              "has_continuous_leave_periods": null,
              "has_employer_benefits": null,
              "has_intermittent_leave_periods": null,
              "has_mailing_address": null,
              "has_other_incomes": null,
              "has_previous_leaves_other_reason": null,
              "has_previous_leaves_same_reason": null,
              "has_reduced_schedule_leave_periods": null,
              "has_state_id": null,
              "has_submitted_payment_preference": null,
              "hours_worked_per_week": null,
              "last_name": null,
              "leave_details": Object {
                "caring_leave_metadata": null,
                "child_birth_date": null,
                "child_placement_date": null,
                "employer_notified": null,
                "has_future_child_date": null,
                "pregnant_or_recent_birth": null,
                "reason_qualifier": null,
              },
              "mailing_address": null,
              "mass_id": null,
              "middle_name": null,
              "other_incomes": Array [],
              "payment_preference": null,
              "phone": Object {
                "int_code": null,
                "phone_number": null,
                "phone_type": null,
              },
              "previous_leaves_other_reason": Array [],
              "previous_leaves_same_reason": Array [],
              "residential_address": Address {
                "city": null,
                "line_1": null,
                "line_2": null,
                "state": null,
                "zip": null,
              },
              "status": null,
              "tax_identifier": null,
              "work_pattern": null,
            },
          ],
          "itemsById": Object {
            "mock_application_id": BenefitsApplication {
              "application_id": "mock_application_id",
              "concurrent_leave": null,
              "created_at": null,
              "date_of_birth": null,
              "employer_benefits": Array [],
              "employer_fein": null,
              "employment_status": null,
              "fineos_absence_id": null,
              "first_name": null,
              "gender": null,
              "has_concurrent_leave": null,
              "has_continuous_leave_periods": null,
              "has_employer_benefits": null,
              "has_intermittent_leave_periods": null,
              "has_mailing_address": null,
              "has_other_incomes": null,
              "has_previous_leaves_other_reason": null,
              "has_previous_leaves_same_reason": null,
              "has_reduced_schedule_leave_periods": null,
              "has_state_id": null,
              "has_submitted_payment_preference": null,
              "hours_worked_per_week": null,
              "last_name": null,
              "leave_details": Object {
                "caring_leave_metadata": null,
                "child_birth_date": null,
                "child_placement_date": null,
                "employer_notified": null,
                "has_future_child_date": null,
                "pregnant_or_recent_birth": null,
                "reason_qualifier": null,
              },
              "mailing_address": null,
              "mass_id": null,
              "middle_name": null,
              "other_incomes": Array [],
              "payment_preference": null,
              "phone": Object {
                "int_code": null,
                "phone_number": null,
                "phone_type": null,
              },
              "previous_leaves_other_reason": Array [],
              "previous_leaves_same_reason": Array [],
              "residential_address": Address {
                "city": null,
                "line_1": null,
                "line_2": null,
                "state": null,
                "zip": null,
              },
              "status": null,
              "tax_identifier": null,
              "work_pattern": null,
            },
          },
        },
        "complete": [Function],
        "create": [Function],
        "hasLoadedAll": false,
        "hasLoadedBenefitsApplicationAndWarnings": [MockFunction],
        "load": [Function],
        "loadAll": [Function],
        "submit": [Function],
        "submitPaymentPreference": [Function],
        "update": [MockFunction],
        "warningsLists": Object {},
      },
      "catchError": [Function],
      "claims": Object {
        "activeFilters": Object {},
        "claimDetail": ClaimDetail {
          "absence_periods": Array [
            AbsencePeriod {
              "absence_period_end_date": "2021-06-08",
              "absence_period_start_date": "2021-06-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002026",
              "period_type": "Reduced",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Approved",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-07-08",
              "absence_period_start_date": "2021-07-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14432-0000002326",
              "period_type": "Continuous",
              "reason": "Serious Health Condition - Employee",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Pending",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002026",
              "period_type": "Reduced",
              "reason": "Pregnancy/Maternity",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Denied",
            },
            AbsencePeriod {
              "absence_period_end_date": "2021-08-08",
              "absence_period_start_date": "2021-08-01",
              "evidence_status": null,
              "fineos_leave_request_id": "PL-14434-0000002326",
              "period_type": "Continuous",
              "reason": "Child Bonding",
              "reason_qualifier_one": null,
              "reason_qualifier_two": null,
              "request_decision": "Withdrawn",
            },
          ],
          "application_id": "application-id",
          "employee": null,
          "employer": ClaimEmployer {
            "employer_dba": null,
            "employer_fein": "employer-fein",
            "employer_id": null,
          },
          "fineos_absence_id": "fineos-abence-id",
          "fineos_notification_id": null,
          "managed_requirements": Array [],
          "outstanding_evidence": Object {
            "employee_evidence": Array [],
            "employer_evidence": Array [],
          },
        },
        "claims": ClaimCollection {
          "items": Array [],
          "itemsById": Object {},
        },
        "clearClaims": [Function],
        "isLoadingClaimDetail": true,
        "isLoadingClaims": undefined,
        "loadClaimDetail": [MockFunction] {
          "calls": Array [
            Array [
              "absence-case-id",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "loadPage": [Function],
        "paginationMeta": PaginationMeta {
          "order_by": undefined,
          "order_direction": undefined,
          "page_offset": undefined,
          "page_size": undefined,
          "total_pages": undefined,
          "total_records": undefined,
        },
      },
      "clearErrors": [Function],
      "clearRequiredFieldErrors": [Function],
      "documents": Object {
        "attach": [Function],
        "documents": DocumentCollection {
          "items": Array [],
          "itemsById": Object {},
        },
        "download": [Function],
        "hasLoadedClaimDocuments": [Function],
        "loadAll": [MockFunction] {
          "calls": Array [
            Array [
              "application-id",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
      "employers": Object {
        "addEmployer": [Function],
        "claim": EmployerClaim {
          "application_id": null,
          "concurrent_leave": null,
          "created_at": null,
          "date_of_birth": null,
          "employer_benefits": Array [],
          "employer_dba": null,
          "employer_fein": null,
          "employer_id": null,
          "fineos_absence_id": null,
          "first_name": null,
          "follow_up_date": null,
          "gender": null,
          "hours_worked_per_week": null,
          "is_reviewable": null,
          "last_name": null,
          "leave_details": Object {
            "continuous_leave_periods": null,
            "employer_notification_date": null,
            "intermittent_leave_periods": null,
            "reason": null,
            "reduced_schedule_leave_periods": null,
          },
          "middle_name": null,
          "previous_leaves": Array [],
          "residential_address": Address {
            "city": null,
            "line_1": null,
            "line_2": null,
            "state": null,
            "zip": null,
          },
          "status": null,
          "tax_identifier": null,
          "uses_second_eform_version": null,
        },
        "documents": null,
        "downloadDocument": [Function],
        "loadClaim": [Function],
        "loadDocuments": [Function],
        "loadWithholding": [Function],
        "submitClaimReview": [Function],
        "submitWithholding": [Function],
      },
      "featureFlags": Object {
        "flags": Array [],
        "getFlag": [Function],
        "loadFlags": [Function],
      },
      "otherLeaves": Object {
        "removeEmployerBenefit": [Function],
        "removeOtherIncome": [Function],
        "removePreviousLeave": [Function],
      },
      "portalFlow": Object {
        "getNextPageRoute": [Function],
        "goTo": [MockFunction],
        "goToNextPage": [Function],
        "goToPageFor": [Function],
        "page": Object {
          "on": Object {
            "UPLOAD_DOC_OPTIONS": "/applications/upload",
            "UPLOAD_PROOF_OF_BIRTH": "/applications/upload/proof-of-birth",
            "UPLOAD_PROOF_OF_PLACEMENT": "/applications/upload/proof-of-placement",
          },
        },
        "pageRoute": "/applications/status",
        "pathWithParams": "/applications/status",
        "pathname": "",
        "updateQuery": [Function],
      },
      "setAppErrors": [Function],
      "users": Object {
        "convertUser": [Function],
        "loadUser": [Function],
        "requireUserConsentToDataAgreement": [MockFunction],
        "requireUserRole": [Function],
        "setUser": [Function],
        "updateUser": [Function],
        "user": User {
          "auth_id": null,
          "consented_to_data_sharing": true,
          "email_address": null,
          "roles": Array [],
          "status": null,
          "user_id": "mock_user_id",
          "user_leave_administrators": Array [],
        },
      },
    }
  }
  query={
    Object {
      "absence_case_id": "absence-case-id",
    }
  }
>
  <div
    className="margin-top-8 text-center"
  >
    <Spinner
      aria-valuetext="Loading claim details"
    >
      <span
        aria-valuetext="Loading claim details"
        className="c-spinner"
        role="progressbar"
      />
    </Spinner>
  </div>
</Status>
`;
